# coal_blending_system_model_tuning

./: .gitignore  README.md  merge_lora.py  pyproject.toml  requirements.txt  test_merged.py
configs/: qwen_lora.yaml  qwen_lora_candidate.yaml  qwen_lora_candidate_fast.yaml  qwen_lora_candidate_v2.yaml  qwen_lora_cpu_smoke.yaml
data/processed/: eval.jsonl  preview.json  train.jsonl
data/processed_candidate/: eval.jsonl  preview.json  train.jsonl
data/processed_candidate_v2/: eval.jsonl  preview.json  train.jsonl
data/raw/: public_coal_quality_samples.csv
docs/: 公开煤质数据来源.md  模型调优实验说明.md
outputs/adapters/qwen-coal-lora/: Modelfile  README.md  adapter_config.json  tokenizer_config.json
outputs/adapters/qwen-coal-lora/checkpoint-20/: adapter_config.json  chat_template.jinja  trainer_state.json
outputs/adapters/qwen-coal-lora/checkpoint-21/: trainer_state.json
outputs/adapters/qwen2.5-1.5b-coal-lora/: README.md  adapter_config.json
outputs/adapters/qwen2.5-1.5b-coal-lora/checkpoint-20/: trainer_state.json
outputs/adapters/qwen2.5-1.5b-coal-lora/checkpoint-21/: README.md  (+1 more)
outputs/merged/: Modelfile
outputs/merged/qwen3-coal-merged/: config.json  generation_config.json
outputs/reports/: candidate_gold_eval_report.json  candidate_gold_predictions.jsonl  eval_report.json  predictions.jsonl  public_expanded_eval_report.json  public_expanded_eval_report_2026_05_11.json
scripts/: build_dataset.py  evaluate_json_outputs.py  make_ollama_modelfile.py  plot_quality_radar.py  train_lora.py
src/coal_tuning/: __init__.py  dataset.py  prompts.py  sql_dump.py
