[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coal-blending-model-tuning"
version = "0.1.0"
description = "LoRA tuning workflow for the coal blending graduation project."
requires-python = ">=3.9"
dependencies = [
    "accelerate>=0.34.0",
    "datasets>=2.20.0",
    "peft>=0.12.0",
    "PyYAML>=6.0.1",
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "trl>=0.9.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]
quant = [
    "bitsandbytes>=0.43.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
